plugins {
    id 'java'
    id("com.gradleup.shadow") version "9.1.0"
    //id 'org.jetbrains.kotlin.jvm'
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
}

group = 'me.onixdevb'
version = '1.0'

repositories {
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        name = "sonatype"
        url = "https://oss.sonatype.org/content/groups/public/"
    }
    maven {
        name = "codemc-releases"
        url = "https://repo.codemc.io/repository/maven-releases/"
    }
}

dependencies {
    compileOnly("org.spigotmc:spigot-api:1.21.11-R0.1-SNAPSHOT")
  //  compileOnly "com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT"
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    implementation("com.github.retrooper:packetevents-spigot:2.11.1")
    implementation("net.kyori:adventure-api:4.17.0")
    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
    implementation(platform("net.kyori:adventure-bom:4.23.0"))
    implementation("net.kyori:adventure-text-minimessage")
    implementation("it.unimi.dsi:fastutil:8.5.15")
    implementation("net.kyori:adventure-platform-bukkit:4.4.0")
//    implementation('net.kyori:adventure-text-minimessage:4.17.0')
    implementation("com.google.code.gson:gson:2.11.0")
// https://mvnrepository.com/artifact/net.kyori/adventure-text-serializer-legacy
   // compileOnly('net.kyori:adventure-text-serializer-legacy:4.17.0')
    implementation(project(":api"))
   // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
kotlin {
    jvmToolchain(17)
}
def targetJavaVersion = 17
java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'

    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        options.release.set(targetJavaVersion)
    }
}
tasks.shadowJar {
    minimize()
    archiveClassifier.set("")
 //   relocate("net.kyori", "libs.kyori")
    relocate("io.github.retrooper","libs.retooper.packetevents.io")
    relocate("com.github.retrooper","libs.retooper.packetevents.com")
    relocate("net.kyori", "libs.kyori")

}

tasks.build.dependsOn tasks.shadowJar

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}
